infrastructure/wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
  namespace: wg-easy
spec:
  ports:
    - name: http
      port: 51821
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: wg-easy
  type: ClusterIP
